<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            style="@style/mediumBlack18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16sdp"
            android:text="@string/invite_friends_and_get_up_to_1000_and_other_bonuses" />

        <TextView
            style="@style/lightDarkGray12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_ut_aliquam_purus_sit" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/invite"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                style="@style/mediumBlack14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_and_earn_even_more" />

            <TextView
                style="@style/lightDarkGray12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/earn_10_ride_credit" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_white_corner"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tvCode"
                    style="@style/lightDarkGray12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/code"
                    tools:ignore="PrivateResource" />

                <TextView
                    android:id="@+id/tvReferralCode"
                    style="@style/mediumBlack14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tvCode"
                    android:text="@string/tourch178342355637536"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_copy_text"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_add_referral" />

            <TextView
                style="@style/regularWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/invite_friends" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                style="@style/lightDarkGray12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/or_share_via" />

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/ivFaceBook"
                android:src="@drawable/ic_google" />

            <ImageView
                android:id="@+id/ivFaceBook"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/ivTwitter"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/ivTwitter"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/ivInsta"
                android:src="@drawable/ic_twitter_bird" />

            <ImageView
                android:id="@+id/ivInsta"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/ivMore"
                android:src="@drawable/ic_instagram" />

            <ImageView
                android:id="@+id/ivMore"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_edit_text"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_dots" />
        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/mediumBlue14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/see_your_invite_history" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>