<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_want_to_join_us_as_a_driver_or_as_a_passenger"
            style="@style/mediumBlack16"
            android:id="@+id/tvTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIntro"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/it_is_a_long_established_fact_that_a_reader_of_a_page_when_looking_at_its_layout"
            style="@style/lightDarkGray10"
            android:lineSpacingExtra="@dimen/_3sdp"/>


        <RelativeLayout
            android:id="@+id/llDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_edit_grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/radioDriver"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_radio_off" />

                <ImageView
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_driver" />

                <TextView
                    android:id="@+id/textDriver"
                    style="@style/lightBlack16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:text="@string/become_a_driver" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_edit_grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/radioPassenger"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_radio_off" />

                <ImageView
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_driver" />

                <TextView
                    android:id="@+id/textPassenger"
                    style="@style/lightBlack16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:text="@string/become_a_passenger" />


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        style="@style/btn_gray"
        android:backgroundTint="@color/color_grey"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/continue_"/>

</LinearLayout>