<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/regularDarkGray14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date_and_time" />

            <TextView
                android:id="@+id/tvDone"
                style="@style/regularBlack14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/done" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlDateTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:paddingHorizontal="@dimen/_10sdp">

            <ImageView
                android:id="@+id/ivFUser"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_calender_primary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ivFUser"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/date_time"
                android:minWidth="@dimen/_80sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDate"
                    style="@style/mediumBlack12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:focusable="false"
                    android:singleLine="true"
                    android:text="@string/now" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/llTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight=".6"
                android:background="@drawable/bg_edit_text">

                <TextView
                    android:id="@+id/tvTimeSchedule"
                    style="@style/regularPrimary14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="" />
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight=".4">

                <RadioGroup
                    android:padding="@dimen/_2sdp"
                    android:id="@+id/rgFilter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_selector_grey"
                    android:checkedButton="@+id/offer"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/rbAm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="1"
                        android:background="@drawable/bg_right_blue"
                        android:button="@null"
                        android:checked="true"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/am"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <RadioButton
                        android:id="@+id/rbPm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="1"
                        android:background="@drawable/bg_left_blue"
                        android:button="@null"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/pm"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />
                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

<!--        <com.tourch.calender.CalendarView
            android:layout_width="match_parent"
            app:headerLabelColor="@color/black"
            app:type="one_day_picker"

            android:layout_height="match_parent"
            android:id="@+id/cvDate"
            android:layout_marginTop="@dimen/_20sdp" />-->
    </LinearLayout>

</RelativeLayout>